[package]
name = "comfy-bounded-ints"
authors = ["Houtamelo"]
version = "0.4.2"
edition = "2021"
license = "MIT"
description = "Bounded-integer types focused on ergonomics and safety. (See README.md)"
repository = "https://github.com/Houtamelo/comfy-bounded-ints"
readme = "README.md"
keywords = ["bound", "bounded", "integer", "int", "saturating"]
categories = ["data-structures", "rust-patterns", "game-development", "mathematics"]
exclude = [".idea/*"]

[dependencies]
serde = { version = "1.0.201", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde"]